--- a/app/styles/_device-detail.scss
+++ b/app/styles/_device-detail.scss
@@ -26,6 +26,99 @@
   user-select: none;
 }
 
+section {
+  margin-bottom: 10px;
+}
+
+.section-header {
+  position: relative;
+  font-size: 1em;
+  font-weight: 500;
+
+  .button {
+    position: absolute;
+    top: 50%;
+    right: 26px;
+    transform: translate(0, -50%);
+    vertical-align: baseline;
+  }
+}
+
+.info {
+  margin: 10px 0 0;
+}
+
+.filter-bars {
+  margin: 20px 0;
+
+  &-editing .filter-check {
+    display: inline-block;
+  }
+}
+
+.filter-bar {
+  display: block;
+  width: 100%;
+  line-height: 30px;
+
+  &:nth-child(1) .meter > span {
+    background-color: #009ac1;
+  }
+
+  &:nth-child(2) .meter > span {
+    background-color: #79c0b3;
+  }
+
+  &:nth-child(3) .meter > span {
+    background-color: #f7716c;
+  }
+
+  &:nth-child(4) .meter > span {
+    background-color: #f1d300;
+  }
+
+  &:nth-child(5) .meter > span {
+    background-color: #3dcd1e;
+  }
+}
+
+.filter-name,
+.filter-value {
+  display: inline-block;
+  text-align: right;
+}
+
+.filter-name {
+  min-width: 48px;
+}
+
+.filter-value {
+  min-width: 60px;
+}
+
+.filter-check {
+  display: none;
+  min-width: 60px;
+  text-align: right;
+}
+
+.meter {
+  position: relative;
+  display: inline-block;
+  width: 300px;
+  height: 12px;
+  background: #e6e6e6;
+  border-radius: 25px;
+
+  > span {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    height: 100%;
+    border-radius: 25px;
+  }
+}
+
 .info-view {
   height: 172px;
 }
@@ -80,15 +173,18 @@
 
 .status-view {
   height: 806px;
+  padding-right: 26px;
 }
 
-.section-header {
-  font-size: 1em;
-  font-weight: 500;
+.device-data .chart-container {
+  width: 100%;
+  height: 240px;
 }
 
-.info {
-  margin: 10px 0;
+.payment-info {
+  .info-field {
+    width: 100%;
+  }
 }
 
 .location-view {
