--- a/app/templates/device-detail.njk
+++ b/app/templates/device-detail.njk
@@ -96,7 +96,7 @@
             <div class="meter"><span style="width: 30%"></span></div>
             <span class="filter-value">30%</span>
             <label class="filter-check">
-              <input type="checkbox" value="1">
+              <input type="checkbox" name="filter" value="1">
             </label>
           </div>
           <div class="filter-bar">
@@ -104,7 +104,7 @@
             <div class="meter"><span style="width: 50%"></span></div>
             <span class="filter-value">50%</span>
             <label class="filter-check">
-              <input type="checkbox" value="2">
+              <input type="checkbox" name="filter" value="2">
             </label>
           </div>
           <div class="filter-bar">
@@ -112,7 +112,7 @@
             <div class="meter"><span style="width: 30%"></span></div>
             <span class="filter-value">30%</span>
             <label class="filter-check">
-              <input type="checkbox" value="3">
+              <input type="checkbox" name="filter" value="3">
             </label>
           </div>
           <div class="filter-bar">
@@ -120,7 +120,7 @@
             <div class="meter"><span style="width: 40%"></span></div>
             <span class="filter-value">40%</span>
             <label class="filter-check">
-              <input type="checkbox" value="4">
+              <input type="checkbox" name="filter" value="4">
             </label>
           </div>
           <div class="filter-bar">
@@ -128,7 +128,7 @@
             <div class="meter"><span style="width: 70%"></span></div>
             <span class="filter-value">70%</span>
             <label class="filter-check">
-              <input type="checkbox" value="5">
+              <input type="checkbox" name="filter" value="5">
             </label>
           </div>
         </div>
@@ -203,6 +203,10 @@
               {
                   'operationCallback': (operation) => {
                       if (parseInt(operation) === 1) return Promise.reject('权限');
+                      return Promise.resolve('成功');
+                  },
+                  'resetFilterCallback': (values) => {
+                      console.log(values);
                       return Promise.resolve('成功');
                   }
               }
