--- a/app/templates/device-detail.njk
+++ b/app/templates/device-detail.njk
@@ -207,7 +207,11 @@
                   },
                   'resetFilterCallback': (values) => {
                       console.log(values);
-                      return Promise.resolve('成功');
+                      return new Promise((resolve) => {
+                          setTimeout(() => {
+                              return resolve('成功');
+                          }, 1000);
+                      });
                   }
               }
           );
