--- a/app/styles/_datatables.scss
+++ b/app/styles/_datatables.scss
@@ -1,9 +1,30 @@
 // stylelint-disable selector-class-pattern
 @import 'variables';
 
-// the style for uninitialized data tables
+// modified from '../../node_modules/vanilla-datatables/src/vanilla-dataTables.css';
+// make the style available for uninitialized tables
 .datatable {
   width: 100%;
+  max-width: 100%;
+  border-spacing: 0;
+
+  > tbody,
+  > tfoot,
+  > thead {
+    td,
+    th {
+      padding: 8px 10px;
+      vertical-align: top;
+    }
+  }
+
+  > thead,
+  > tfoot {
+    th {
+      text-align: left;
+      vertical-align: bottom;
+    }
+  }
 
   thead {
     background-color: $table-header-background;
@@ -11,10 +32,6 @@
 
     tr {
       height: 40px;
-    }
-
-    th {
-      text-align: left;
     }
   }
 
@@ -32,7 +49,16 @@
   }
 }
 
-// modified from '../../node_modules/vanilla-datatables/src/vanilla-dataTables.css';
+.datatable th {
+  text-align: left;
+  vertical-align: bottom;
+}
+
+.datatable th a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .dataTable-wrapper.no-header .dataTable-container {
   border-top: 1px solid #d9d9d9;
 }
@@ -128,41 +154,6 @@
   .pager a {
     font-weight: bold;
   }
-}
-
-/* TABLE */
-.dataTable-table {
-  width: 100%;
-  max-width: 100%;
-  border-spacing: 0;
-
-  > tbody,
-  > tfoot,
-  > thead {
-    td,
-    th {
-      padding: 8px 10px;
-      vertical-align: top;
-    }
-  }
-
-  > thead,
-  > tfoot {
-    th {
-      text-align: left;
-      vertical-align: bottom;
-    }
-  }
-}
-
-.dataTable-table th {
-  text-align: left;
-  vertical-align: bottom;
-}
-
-.dataTable-table th a {
-  color: inherit;
-  text-decoration: none;
 }
 
 .dataTable-sorter {
