feat(customer-list): export customer list page style

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -149,6 +149,10 @@ body {
   @import 'ticket-list';
 }
 
+.customer-list {
+  @import 'customer-list';
+}
+
 .customer-detail {
   @import 'customer-detail';
 }
