fix(device-detail): fix button link style

--- a/app/styles/_device-detail.scss
+++ b/app/styles/_device-detail.scss
@@ -23,6 +23,7 @@
   box-shadow: 0 1px lighten(#019bc2, 5%);
   color: $light;
   cursor: pointer;
+  text-decoration: none;
   user-select: none;
 }
 
