--- a/app/templates/device-detail.njk
+++ b/app/templates/device-detail.njk
@@ -206,9 +206,9 @@
                       return Promise.resolve('成功');
                   },
                   'resetFilterCallback': (values) => {
-                      console.log(values);
-                      return new Promise((resolve) => {
+                      return new Promise((resolve, reject) => {
                           setTimeout(() => {
+                              if (values.indexOf('2') >= 0) return reject('失败');
                               return resolve('成功');
                           }, 1000);
                       });
