feat(device-list): fetch and update purified data

--- a/app/templates/device-list.njk
+++ b/app/templates/device-list.njk
@@ -57,6 +57,11 @@
                   '正常',
               ]),
           });
+          fetch('/mock/purified')
+              .then((resp) => resp.json())
+              .then((data) => {
+                  deviceListView.updatePurifiedView(data['purified']);
+              });
       })
   </script>
 {% endblock %}
