--- a/app/templates/customer-detail.njk
+++ b/app/templates/customer-detail.njk
@@ -7,7 +7,11 @@
 {% endblock %}
 
 {% block breadcumb %}
-  <div>业务概况/客户/客户信息</div>
+  <ul class="breadcrumb">
+    <li><a href="#">业务概况</a></li>
+    <li><a href="#">客户</a></li>
+    <li><a href="#">客户信息</a></li>
+  </ul>
 {% endblock %}
 
 {% block content %}
