--- a/app/templates/dashboard.njk
+++ b/app/templates/dashboard.njk
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block breadcumb %}
-  <div>业务概况</div>
+  <ul class="breadcrumb">
+    <li><a href="#">业务概况</a></li>
+  </ul>
 {% endblock %}
 
 {% block content %}
