--- a/app/templates/ticket-detail.njk
+++ b/app/templates/ticket-detail.njk
@@ -7,7 +7,11 @@
 {% endblock %}
 
 {% block breadcumb %}
-  <div>业务概况/服务单/服务单信息</div>
+  <ul class="breadcrumb">
+    <li><a href="#">业务概况</a></li>
+    <li><a href="#">服务单</a></li>
+    <li><a href="#">服务单信息</a></li>
+  </ul>
 {% endblock %}
 
 {% block content %}
