--- a/app/templates/customer-list.njk
+++ b/app/templates/customer-list.njk
@@ -7,7 +7,10 @@
 {% endblock %}
 
 {% block breadcumb %}
-  <div>业务概况/客户</div>
+  <ul class="breadcrumb">
+    <li><a href="#">业务概况</a></li>
+    <li><a href="#">客户</a></li>
+  </ul>
 {% endblock %}
 
 {% block content %}
