--- a/app/templates/device-detail.njk
+++ b/app/templates/device-detail.njk
@@ -7,7 +7,11 @@
 {% endblock %}
 
 {% block breadcumb %}
-  <div>业务概况/设备信息/设备详情</div>
+  <ul class="breadcrumb">
+    <li><a href="#">业务概况</a></li>
+    <li><a href="#">设备信息</a></li>
+    <li><a href="#">设备详情</a></li>
+  </ul>
 {% endblock %}
 
 {% block content %}
