--- a/app/templates/device-list.njk
+++ b/app/templates/device-list.njk
@@ -5,7 +5,10 @@
 {% endblock %}
 
 {% block breadcumb %}
-  <div>业务概况/设备信息</div>
+  <ul class="breadcrumb">
+    <li><a href="#">业务概况</a></li>
+    <li><a href="#">设备信息</a></li>
+  </ul>
 {% endblock %}
 
 {% block content %}
