--- a/app/templates/customer-detail.njk
+++ b/app/templates/customer-detail.njk
@@ -53,7 +53,13 @@
   </div>
   <div class="column">
     <div class="ticket-view block">
-      <h4 class="block-header">激活记录</h4>
+      <div class="panel-control">
+        <select class="switch" title="切换表格内容">
+          <option value="1">激活记录</option>
+          <option value="2">维护记录</option>
+        </select>
+        <i class="icon icon-arrowhead-down"></i>
+      </div>
       <table class="device-record-table datatable">
         <thead>
         <tr>
