feat(dashboard): add `updateInstallationView` function

--- a/app/templates/dashboard.njk
+++ b/app/templates/dashboard.njk
@@ -123,6 +123,7 @@
                   value: [121.62, 38.92, 147, 520],
               },
           ]);
+          dashboard.updateInstallationView([2, 3, 5, 47, 73, 51, 29, 67, 58, 61, 29]);
           dashboard.updateServiceView([53, 65, 34, 17, 32, 44, 37, 58, 28, 19, 15]);
           dashboard.updateSalesView({
               cities: ['东营', '北京', '上海', '临汾', '鹰潭'],
