feat(dashboard): add year select

--- a/app/templates/dashboard.njk
+++ b/app/templates/dashboard.njk
@@ -15,7 +15,8 @@
     <div class="map-view">
       <form class="panel-control">
         <select name="year" class="panel-control-item year-select" title="year">
-          <option value="2017">2017</option>
+          <option value="2018">2017</option>
+          <option value="2017" selected>2017</option>
         </select>
         <select class='panel-control-item region-select' name="region" title="region">
           <option value="">全国</option>
